# NanaBigV

./: .gitignore  AGENTS.md  DESIGN.md  README.md  app.config.json  index.html  package.json  tsconfig.json  vite.config.ts
.github/: release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: architecture.md  index.md  project-overview.md  todo.md
docs/.vitepress/: config.ts
docs/design/: game_brief_for_agents.md
docs/guide/: development.md
scripts/: app-config-sync.mjs  check-package-manager.mjs  prepare-app.mjs  sync-app-config.mjs  tauri-dev.mjs  version-bump.mjs
src/: App.vue  main.ts  router.ts  routerMeta.d.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: context.rs  lib.rs  live_config.rs  main.rs  memory.rs  provider.rs  window_state.rs
src/components/: ConfirmDialog.vue  ContextMenuHost.vue  Dropdown.vue  TitleBar.vue  ToggleSwitch.vue  ViewTabs.vue
src/composables/: menuMotion.ts  useContextMenu.ts  useCornerStyle.ts  useGlobalScrollbarVisibility.ts  useTheme.ts  (+6 more)
tests/: appShell.test.ts  audienceGeneration.test.ts  audiencePlanner.test.ts  contextMenuHost.test.ts  cornerStyle.test.ts  dropdown.test.ts  echoLiveClient.test.ts  eventRuntime.test.ts  globalScrollbarVisibility.test.ts  memoryApi.test.ts  memoryFixtures.ts  memoryWriteback.test.ts  mockDataSource.test.ts  providerSettings.test.ts  router.test.ts  setupTests.ts  shellComposables.test.ts  theme.test.ts  tooling.test.ts  version-bump.test.ts
(+54 files in other folders)
