[package]
name = "tauri_template"
version = "0.1.0"
description = "A minimal Tauri application template"
authors = ["you"]
edition = "2021"

[lib]
name = "tauri_template_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
