[package]
name = "nanabigv"
version = "0.1.0"
description = "NaNaBigV desktop application"
authors = ["you"]
edition = "2021"

[lib]
name = "nanabigv_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
